crates/aion-awl/tests/fixtures/rev2/declarations/invalid/call_unknown_action.awl
//! The pipe calls an action no worker block declares.
workflow notify_once
  input message: String
  outcome sent: type Receipt, route success

type Receipt { id: String, accepted: Bool }

worker notifier
  action send_message(message: String) -> Receipt

step send
  message |> frobnicate |> route sent
